# oraculo-icms

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/v1/routes/: __init__.py  (+11 more)
backend/app/app_logging/: __init__.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  base_class.py  seeds.py
backend/app/db/migrations/: env.py
backend/app/logging/: config.py
backend/app/models/: __init__.py  api_key.py  app_setting.py  audit_finding.py  audit_log.py  audit_run.py  file.py  invoice.py  invoice_item.py  org_setting.py  organization.py  page.py  plan.py  rule_reference.py  ruleset.py  subscription.py  suggestion.py  user.py  user_org_role.py
backend/app/rules/: baseline.yaml
backend/app/rules/packs/: zfm_baseline.yaml
backend/app/schemas/: __init__.py  admin.py  audit.py  base.py  billing.py  invoice.py  organization.py  plan.py  public_api.py  rules.py  user.py
backend/app/services/: api_keys.py  app_settings.py  audit_report.py  audit_summary.py  invoice_ingestion.py  org_plan_limits.py  page_service.py  plan_catalog.py  rule_packs.py  rules_dsl.py  rules_engine.py  ruleset_service.py  sso.py  stripe_billing.py  zfm_calculator.py
backend/app/services/storage/: __init__.py  base.py  local.py  s3.py
backend/app/utils/: xml_parser.py
backend/app/workers/: __init__.py  tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_audit_reports.py  test_billing.py  test_health.py  test_rules.py  test_upload_flow.py
backend/tests/data/: sample_invoice.xml
backend/tests/unit/: test_audit_summary.py  test_rules_engine.py  test_xml_parser.py  test_zfm_calculator.py
(+42 files in other folders)
