[tool.poetry]
name = "oraculo-icms-api"
version = "0.1.0"
description = "Backend FastAPI para a plataforma Oráculo ICMS"
authors = ["Equipe Oráculo <devs@oraculo.app>"]
license = "MIT"

packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
psycopg = { extras = ["binary"], version = "^3.1.18" }
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
redis = "^5.0.3"
celery = "^5.3.6"
python-dotenv = "^1.0.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["argon2"], version = "^1.7.4" }
structlog = "^24.1.0"
prometheus-client = "^0.20.0"
weasyprint = "^62.3"
openpyxl = "^3.1.2"
stripe = "^10.0.0"
lxml = "^5.1.0"
python-multipart = "^0.0.18"
email-validator = "^2.1.1"
cryptography = "^42.0.5"
httpx = "^0.27.0"
itsdangerous = "^2.1.2"
tenacity = "^8.2.3"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"
anyio = "^4.2.0"
ruff = "^0.3.4"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B", "Q", "W", "N"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
